--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <p class="nav__p-error" id="error-description">* Campo obligatorio</p>
                     </div>
                     <div class="nav__div-btn">
-                        <img src="../img/menu.svg" alt="" class="nav__div-btn-img-menu" id="menu-filter">
+                        <img src="./img/menu.svg" alt="" class="nav__div-btn-img-menu" id="menu-filter">
                         <input type="submit" value="Add" class="nav__input-submit" id="add">
                     </div>
                 </form>
