--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                             <p class="nav__p-error" id="error-description">* Campo obligatorio</p>
                         </div>
                         <div class="nav__div-btn">
-                            <img src="./img/menu.svg" alt="" class="nav__div-btn-img-menu" id="menu-filter">
                             <input type="submit" value="Add" class="nav__input-submit" id="add">
+                            <img class="nav__div-btn-img-menu" id="menu-filter" src="./img/search.svg" alt="">
                         </div>
                     </form>
                 </div>
